# CmisSync

./: .gitignore  .gitmodules  Makefile.am  Makefile.fatbuild  README.md  TODO  TODO-EventDesign  configure.ac  copyright.py  coverage.cfg  dataspace-sync.spec  nunit-console  removebom
CmisSync.Lib/: ActivityListenerAggregator.cs  Backend.cs  ChunkedStream.cs  ClientBrandBase.cs  CmisSync.Lib.csproj  Config.cs  ConfigManager.cs  ConfigMigration.cs  Credentials.cs  Defines.cs.in  EventManagerInitializer.cs  Fetcher.cs  HttpProxyUtils.cs  IActivityListener.cs  LoggingStream.cs  Makefile.am  RepoBase.cs  RepoInfo.cs  Settings.StyleCop  StaticDefines.cs  Utils.cs  Watcher.cs  packages.config
CmisSync.Lib/Accumulator/: LocalObjectFetcher.cs  RemoteObjectFetcher.cs  RemoteObjectMovedOrRenamedAccumulator.cs
CmisSync.Lib/Cmis/: AbstractDisposableAuthProvider.cs  AbstractNotifyingRepository.cs  AuthProviderFactory.cs  CmisPermissionDeniedException.cs  CmisServerNotFoundException.cs  CmisUtils.cs  Crypto.cs  Database.cs  DotCMISLogListener.cs  IDatabase.cs  IDisposableAuthProvider.cs  INotifyRepositoryPropertyChanged.cs  MimeType.cs  OperationContextFactory.cs  PersistentNtlmAuthenticationProvider.cs  PersistentStandardAuthenticationProvider.cs  Repository.cs  RepositoryExceptionEventArgs.cs  RepositoryStatus.cs  RepositoryStatusAggregator.cs  StandardAuthenticationProvider.cs  StandardAuthenticationProviderWrapper.cs  SyncStatus.cs
CmisSync.Lib/Config/: AuthenticationType.cs  Brand.cs  CmisRepoCredentials.cs  Config.cs  ConfigManager.cs  ConfigMigration.cs  Credentials.cs  Crypto.cs  DefaultEntries.cs  Feature.cs  Password.cs  ProxySettings.cs  RepoInfo.cs  ServerCredentials.cs  User.cs  UserCredentials.cs  XmlUri.cs
CmisSync.Lib/Consumer/: ISituationDetection.cs  InteractionNeededException.cs  LocalSituationDetection.cs  RemoteSituationDetection.cs  RepositoryRootDeletedDetection.cs  RetryException.cs  SyncMechanism.cs
CmisSync.Lib/ContentTasks/: AbortException.cs  ChunkedDownloader.cs  ChunkedUploader.cs  FileUploader.cs  IFileDownloader.cs  IFileUploader.cs  SimpleFileDownloader.cs  SimpleFileUploader.cs  UploadFailedException.cs  Utils.cs
CmisSync.Lib/Data/: AbstractPathMatcher.cs  IMappedFile.cs  IMappedFolder.cs  IMappedObject.cs  IObjectTree.cs  IPathMatcher.cs  MappedFile.cs  MappedFolder.cs  MappedObject.cs  MappedObjectData.cs  MappedObjects.cs  ObjectTree.cs  PathMatcher.cs  SyncObjects.cs
CmisSync.Lib/Events/: AbstractEventProducer.cs  AbstractFolderEvent.cs  ActiveActivitiesManager.cs  BubbledEvent.cs  ChangeEnums.cs  CmisConnectionExceptionEvent.cs  ConfigChangedEvent.cs  ConfigurationNeededEvent.cs  ContentChangeEvent.cs  CrawlRequestEvent.cs  DebugLoggingHandler.cs  EncapsuledEvent.cs  Enums.cs  EventCategory.cs  EventHandlerPriorities.cs  ExceptionEvent.cs  FSEvent.cs  FSMovedEvent.cs  FileConflictEvent.cs  FileDownloadRequest.cs  FileEvent.cs  FileMovedEvent.cs  FileOrFolderEventFactory.cs  FileTransmissionEvent.cs  FileTransmissionEventArgs.cs  FolderEvent.cs  FolderMovedEvent.cs  FullSyncCompletedEvent.cs  GenericSyncEventHandler.cs  ICountableEvent.cs  IDisposableSyncEventQueue.cs  IFSEvent.cs  IFSMovedEvent.cs  IFilterableEvent.cs  IFilterableLocalPathEvent.cs  IFilterableNameEvent.cs  IFilterableRemoteObjectEvent.cs  IFilterableRemotePathEvent.cs  IRemoveFromLoggingEvent.cs  ISyncEvent.cs  (+19 more)
CmisSync.Lib/Exceptions/: AbstractInteractionNeededException.cs  ExceptionLevel.cs  InteractionNeededException.cs  QuotaExceededException.cs  RetryException.cs  VirusDetectedException.cs  VirusScannerUnavailableException.cs
CmisSync.Lib/FileTransmission/: AbortException.cs  ChunkedDownloader.cs  ChunkedUploader.cs  ContentTaskUtils.cs  IFileDownloader.cs  IFileUploader.cs  ITransmissionAggregator.cs  ITransmissionFactory.cs  ITransmissionManager.cs  SimpleFileDownloader.cs  SimpleFileUploader.cs  Transmission.cs  TransmissionController.cs  TransmissionFactory.cs  TransmissionManager.cs  UploadFailedException.cs
CmisSync.Lib/Filter/: AbstractFileFilter.cs  FilterAggregator.cs  GenericHandleDublicatedEventsFilter.cs  IFilterAggregator.cs  IgnoreAlreadyHandledContentChangeEventsFilter.cs  IgnoreAlreadyHandledFsEventsFilter.cs  IgnoredFileNamesFilter.cs  IgnoredFolderNameFilter.cs  IgnoredFoldersFilter.cs  InvalidFolderNameFilter.cs  ReportingFilter.cs  RepositoryRootDeletedDetection.cs  SymlinkFilter.cs
CmisSync.Lib/HashAlgorithm/: HashAlgorithmReuse.cs  IReusableHashAlgorithm.cs  SHA1Reuse.cs
CmisSync.Lib/PathMatcher/: IPathMatcher.cs  MappedFile.cs  PathMatcher.cs
CmisSync.Lib/Queueing/: AbstractEventProducer.cs  ActiveActivitiesManager.cs  ConnectionInterruptedHandler.cs  ConnectionScheduler.cs  DebugLoggingHandler.cs  DelayRetryAndNextSyncEventHandler.cs  EventHandlerPriorities.cs  GenericSyncEventHandler.cs  IConnectionScheduler.cs  ICountingQueue.cs  IDisposableSyncEventQueue.cs  IEventCounter.cs  ISyncEventManager.cs  ISyncEventQueue.cs  QueuedCategorizedEventsCounter.cs  QueuedEventsCounter.cs  ReportingSyncEventHandler.cs  SyncEventHandler.cs  SyncEventManager.cs  SyncEventQueue.cs  SyncScheduler.cs  SyncStrategyInitializer.cs  TransmissionManager.cs  Unsubscriber.cs
CmisSync.Lib/SelectiveIgnore/: AbstractIgnoredEntity.cs  CmisSelectiveIgnoreCapability.cs  IIgnoredEntitiesCollection.cs  IIgnoredEntitiesStorage.cs  IIgnoredEntity.cs  IgnoreFlagChangeDetection.cs  IgnoredEntitiesCollection.cs  IgnoredEntitiesStorage.cs  IgnoredEntity.cs  IgnoredState.cs  SelectiveIgnoreEventTransformer.cs  SelectiveIgnoreFilter.cs
CmisSync.Lib/Status/: ConnectionStatus.cs  RepositoryStatus.cs  Server.cs  SynchronizationStatus.cs
CmisSync.Lib/Storage/: DataBaseTableNames.cs  DirectoryInfoWrapper.cs  EntryNotFoundException.cs  EventStorage.cs  ExtendedAttributeException.cs  ExtendedAttributeReaderDos.cs  ExtendedAttributeReaderUnix.cs  FailedOperationsStorage.cs  FileInfoWrapper.cs  FileSystemInfoFactory.cs  FileSystemInfoWrapper.cs  GeneralRepoStorage.cs  ICookieStorage.cs  IDirectoryInfo.cs  (+9 more)
Extras/: .gitignore  Makefile.am
packaging/: .gitignore  Makefile.am
(+928 files in other folders)
