ASSEMBLY = CmisSync.Lib
TARGET = library

ASSEMBLY_INFO_SOURCE = Defines.cs

LIBS = $(LOG4NET_LIBS) $(DATALIBS) $(JSON_LIBS) $(DOTCMIS_LIBS) $(WEBLIBS) $(MONOPOSIX) $(MONOMAC_LIBS) $(DBREEZE_LIBS)

SOURCES =  \
	ActivityListenerAggregator.cs \
	Backend.cs \
	Cmis/AuthProviderFactory.cs \
	Cmis/CmisPermissionDeniedException.cs \
	Cmis/CmisServerNotFoundException.cs \
	Cmis/CmisUtils.cs \
	Cmis/Crypto.cs \
	Cmis/DotCMISLogListener.cs \
	Cmis/IDisposableAuthProvider.cs \
	Cmis/MimeType.cs \
	Cmis/OperationContextFactory.cs \
	Cmis/PersistentNtlmAuthenticationProvider.cs \
	Cmis/PersistentStandardAuthenticationProvider.cs \
	Cmis/StandardAuthenticationProviderWrapper.cs \
	Config/Config.cs \
	Config/ConfigManager.cs \
	Config/ConfigMigration.cs \
	Config/Feature.cs \
	Config/ProxySettings.cs \
	Config/RepoInfo.cs \
	Config/XmlUri.cs \
	ContentTasks/AbortException.cs \
	ContentTasks/ChunkedDownloader.cs \
	ContentTasks/ChunkedUploader.cs \
	ContentTasks/ContentTaskUtils.cs \
	ContentTasks/IFileDownloader.cs \
	ContentTasks/IFileUploader.cs \
	ContentTasks/SimpleFileDownloader.cs \
	ContentTasks/SimpleFileUploader.cs \
	ContentTasks/UploadFailedException.cs \
	Credentials.cs \
	Data/IMappedObject.cs \
	Data/IObjectTree.cs \
	Data/IPathMatcher.cs \
	Data/MappedObject.cs \
	Data/ObjectTree.cs \
	Data/PathMatcher.cs \
	Defines.cs \
	Events/AbstractEventProducer.cs \
	Events/ActiveActivitiesManager.cs \
	Events/ChangeEnums.cs \
	Events/DebugLoggingHandler.cs \
	Events/EventFilter/AbstractFileFilter.cs \
	Events/EventFilter/FilterAggregator.cs \
	Events/EventFilter/GenericHandleDublicatedEventsFilter.cs \
	Events/EventFilter/IFilterAggregator.cs \
	Events/EventFilter/IgnoreAlreadyHandledContentChangeEventsFilter.cs \
	Events/EventFilter/IgnoreAlreadyHandledFsEventsFilter.cs \
	Events/EventFilter/IgnoredFileNamesFilter.cs \
	Events/EventFilter/IgnoredFilesFilter.cs \
	Events/EventFilter/IgnoredFolderNameFilter.cs \
	Events/EventFilter/IgnoredFoldersFilter.cs \
	Events/EventFilter/InvalidFolderNameFilter.cs \
	Events/EventFilter/ReportingFilter.cs \
	Events/EventHandlerPriorities.cs \
	Events/EventTypes/AbstractFolderEvent.cs \
	Events/EventTypes/BubbledEvent.cs \
	Events/EventTypes/ConfigChangedEvent.cs \
	Events/EventTypes/ContentChangeEvent.cs \
	Events/EventTypes/CrawlRequestEvent.cs \
	Events/EventTypes/EncapsuledEvent.cs \
	Events/EventTypes/ExceptionEvent.cs \
	Events/EventTypes/FileConflictEvent.cs \
	Events/EventTypes/FileEvent.cs \
	Events/EventTypes/FileMovedEvent.cs \
	Events/EventTypes/FileTransmissionEvent.cs \
	Events/EventTypes/FolderEvent.cs \
	Events/EventTypes/FolderMovedEvent.cs \
	Events/EventTypes/FSEvent.cs \
	Events/EventTypes/FSMovedEvent.cs \
	Events/EventTypes/FullSyncCompletedEvent.cs \
	Events/EventTypes/IFilterableEvent.cs \
	Events/EventTypes/IFilterableLocalPathEvent.cs \
	Events/EventTypes/IFilterableNameEvent.cs \
	Events/EventTypes/IFilterableRemoteObjectEvent.cs \
	Events/EventTypes/IFilterableRemotePathEvent.cs \
	Events/EventTypes/IFSEvent.cs \
	Events/EventTypes/IFSMovedEvent.cs \
	Events/EventTypes/IRemoveFromLoggingEvent.cs \
	Events/EventTypes/ISyncEvent.cs \
	Events/EventTypes/PermissionDeniedEvent.cs \
	Events/EventTypes/ProxyAuthRequiredEvent.cs \
	Events/EventTypes/RecentChangedEvent.cs \
	Events/EventTypes/RemoteEvent.cs \
	Events/EventTypes/RequestIgnoredEvent.cs \
	Events/EventTypes/StartNextSyncEvent.cs \
	Events/EventTypes/SuccessfulLoginEvent.cs \
	Events/FileDownloadRequest.cs \
	Events/FileOrFolderEventFactory.cs \
	Events/GenericSyncEventHandler.cs \
	Events/IDisposableSyncEventQueue.cs \
	Events/ISyncEventManager.cs \
	Events/ISyncEventQueue.cs \
	Events/ReportingSyncEventHandler.cs \
	Events/SyncEventHandler.cs \
	Events/SyncEventManager.cs \
	Events/SyncEventQueue.cs \
	Events/SyncScheduler.cs \
	Events/SyncStrategyInitializer.cs \
	HttpProxyUtils.cs \
	IActivityListener.cs \
	Storage/DataBaseTableNames.cs \
	Storage/DBreezeInitializerSingleton.cs \
	Storage/EntryNotFoundException.cs \
	Storage/EventStorage.cs \
	Storage/FailedOperationsStorage.cs \
	Storage/FileSystem/DirectoryInfoWrapper.cs \
	Storage/FileSystem/ExtendedAttributeException.cs \
	Storage/FileSystem/ExtendedAttributeReaderDos.cs \
	Storage/FileSystem/ExtendedAttributeReaderUnix.cs \
	Storage/FileSystem/FileInfoWrapper.cs \
	Storage/FileSystem/FileSystemInfoFactory.cs \
	Storage/FileSystem/FileSystemInfoWrapper.cs \
	Storage/FileSystem/IDirectoryInfo.cs \
	Storage/FileSystem/IExtendedAttributeReader.cs \
	Storage/FileSystem/IFileInfo.cs \
	Storage/FileSystem/IFileSystemInfo.cs \
	Storage/FileSystem/IFileSystemInfoFactory.cs \
	Storage/FileSystem/IFileSystemWatcher.cs \
	Storage/ICookieStorage.cs \
	Storage/IMetaDataStorage.cs \
	Storage/MetaDataStorage.cs \
	Storage/PersistentCookieStorage.cs \
	Streams/BandwidthLimitedStream.cs \
	Streams/ChunkedStream.cs \
	Streams/ForwardReadingStream.cs \
	Streams/NonClosingHashStream.cs \
	Streams/OffsetStream.cs \
	Streams/ProgressStream.cs \
	Streams/StreamWrapper.cs \
	Sync/CmisRepo.cs \
	Sync/Solver/ISolver.cs \
	Sync/Solver/LocalObjectAdded.cs \
	Sync/Solver/LocalObjectChanged.cs \
	Sync/Solver/LocalObjectDeleted.cs \
	Sync/Solver/LocalObjectDeletedRemoteObjectDeleted.cs \
	Sync/Solver/LocalObjectMoved.cs \
	Sync/Solver/LocalObjectRenamed.cs \
	Sync/Solver/LocalObjectRenamedRemoteObjectRenamed.cs \
	Sync/Solver/NothingToDoSolver.cs \
	Sync/Solver/RemoteObjectAdded.cs \
	Sync/Solver/RemoteObjectChanged.cs \
	Sync/Solver/RemoteObjectDeleted.cs \
	Sync/Solver/RemoteObjectMoved.cs \
	Sync/Solver/RemoteObjectRenamed.cs \
	Sync/Strategy/ContentChangeEventAccumulator.cs \
	Sync/Strategy/ContentChangeEventTransformer.cs \
	Sync/Strategy/ContentChanges.cs \
	Sync/Strategy/DescendantsCrawler.cs \
	Sync/Strategy/FileSynchronizer.cs \
	Sync/Strategy/ISituationDetection.cs \
	Sync/Strategy/LocalObjectFetcher.cs \
	Sync/Strategy/LocalSituationDetection.cs \
	Sync/Strategy/RemoteObjectFetcher.cs \
	Sync/Strategy/RemoteObjectMovedOrRenamedAccumulator.cs \
	Sync/Strategy/RemoteSituationDetection.cs \
	Sync/Strategy/RetryException.cs \
	Sync/Strategy/SyncMechanism.cs \
	Sync/Strategy/Watcher/CreatedChangedDeletedFileSystemEventHandler.cs \
	Sync/Strategy/Watcher/IWatcherProducer.cs \
	Sync/Strategy/Watcher/MacWatcher.cs \
	Sync/Strategy/Watcher/NetWatcher.cs \
	Sync/Strategy/Watcher/RenamedFileSystemEventHandler.cs \
	Sync/Strategy/Watcher/WatcherConsumer.cs \
	Utils.cs

EXTRA_DIST = CmisSync.Lib.csproj StaticDefines.cs

include $(top_srcdir)/build/build.mk
